--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -131,8 +131,6 @@ jobs:
   publish-packages:
     needs: build-packages
     runs-on: ubuntu-latest
-    env:
-      NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - name: Download work archive
         uses: actions/download-artifact@v2
@@ -147,26 +145,12 @@ jobs:
         with:
           node-version: lts/gallium
           cache: "npm"
-          registry-url: https://npm.pkg.github.com/pinnacle-labs
-
-      # Publish packages using lerna publish with commit as version
-      - name: Publish packages
-        run: |
-          export HUSKY=0
-          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > ~/.npmrc
-          GIT_VERSION="${{ github.sha }}"
-          PKG_VERSION=`npm version --json | jq -r '.["@taqueria/taqueria"]'`
-          VERSION="${PKG_VERSION}-${GIT_VERSION}"
-          echo $VERSION
-          rm -rf .deno
-          rm work.tar.gz 
-          git config --global user.email "mweichert@gmail.com"
-          git config --global user.name "Michael Weichert"
-          git add .
-          git commit -m "Pre version bump"
-          npx lerna version $VERSION --yes --force-publish --no-push --exact
-          echo "Updated versions"
-          npx lerna publish from-package --yes --no-push --exact --registry https://npm.pkg.github.com/pinnacle-labs
+           
+      # Publish packages
+      - name: Publish to npm
+        run: npx lerna publish from-package --no-push
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
   list-e2e-tests:
     runs-on: ubuntu-latest
