--- a/taqueria-protocol/package.json
+++ b/taqueria-protocol/package.json
@@ -58,5 +58,6 @@
 		"rambda": "^7.5.0",
 		"rambdax": "^8.1.0",
 		"zod": "^3.21.4"
-	}
+	},
+	"gitHead": "b67efe3a270b6d9b9cdff49033497371df75aac5"
 }
