Fixes #1890, reformats the npm packages in the table

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -221,7 +221,7 @@ jobs:
       - name: List Lerna Packages
         id: list_packages
         run: |
-          echo "::set-output name=PACKAGES::"$(npx lerna ls --json --all | jq -r '.[] | select(.private == false) | "\(.name) \(.version)"' | tr '\n' ',' | sed 's/,$//')
+          echo "::set-output name=PACKAGES::"$(npx lerna ls --json --all | jq -r '.[] | select(.private == false) | "\(.name)|\(.version)"' | tr ',' '\n' | awk 'BEGIN {print "| Package | Version |"; print "| :--- | :--- |";} {print}')  
           
       - name: Update or Create comment
         uses: peter-evans/create-or-update-comment@v1
