--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -256,7 +256,7 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: taq-linux/taq
-          asset_name: taq (Linux)
+          asset_name: taq-linux
           asset_content_type: application/octet-stream
 
       - name: Upload MacOS binary
@@ -267,7 +267,7 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: taq-macos/taq
-          asset_name: taq (MacOS)
+          asset_name: taq-macos
           asset_content_type: application/octet-stream
 
       - name: Upload VSCode Extension
@@ -329,7 +329,14 @@ jobs:
       - name: List Lerna Packages
         id: list_packages
         run: |
-          PACKAGES=$(npx lerna ls --json | jq -r '.[] | "| \(.name) | \(.version) |"')
+          PACKAGES=$(npx lerna ls --json | jq -c '.[]' | while read -r package; do
+            name=$(echo "$package" | jq -r '.name')
+            version=$(echo "$package" | jq -r '.version')
+            echo "| $name | $version |"
+          done)
+          PACKAGES="${PACKAGES//'%'/'%25'}"
+          PACKAGES="${PACKAGES//$'\n'/'%0A'}"
+          PACKAGES="${PACKAGES//$'\r'/'%0D'}"
           echo "PACKAGES=$PACKAGES" >> "$GITHUB_OUTPUT"
           
       - name: Update or Create comment
