--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "@taqueria/taqueria",
-	"version": "0.36.9",
+	"name": "@taqueria/root",
+	"version": "0.36.12",
 	"description": "An easy to use opinionated tool for building, testing, and deploying Tezos software",
 	"main": "index.ts",
 	"directories": {
@@ -19,8 +19,8 @@
 		"watch": "npx chokidar \"*.ts\" \"taqueria-utils/**/*.ts\" \"taqueria-protocol/**/*.ts\" -c \"npm run build\" --initial",
 		"build-and-watch-vscode": "npx chokidar \"*.ts\" \"taqueria-vscode-extension/**/*.ts\" \"taqueria-protocol/**/*.ts\" -c \"npm run compile -w taqueria-vscode-extension\" --initial",
 		"prepare": "husky install",
-		"format": "dprint fmt",
-		"format:check": "dprint check",
+		"format": "npx dprint fmt",
+		"format:check": "npx dprint check",
 		"update-lock": "deno cache --import-map ./import_map.json --lock ./deno-lock.json --lock-write index.ts"
 	},
 	"repository": {
@@ -74,7 +74,7 @@
 		"./tests"
 	],
 	"lint-staged": {
-		"*.{ts,tsx,js,jsx,cjs,mjs,json}": "dprint fmt"
+		"*.{ts,tsx,js,jsx,cjs,mjs,json}": "npx dprint fmt"
 	},
 	"dependencies": {
 		"@docusaurus-terminology/parser": "^1.3.0",
