--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/root",
-	"version": "0.37.12",
+	"version": "0.37.13",
 	"description": "An easy to use opinionated tool for building, testing, and deploying Tezos software",
 	"main": "index.ts",
 	"directories": {
@@ -74,7 +74,7 @@
 		"./tests"
 	],
 	"lint-staged": {
-		"*.{ts,tsx,js,jsx,cjs,mjs,json}": "npx dprint fmt"
+		"*.{ts,tsx,jsx,cjs,mjs,json}": "npx dprint fmt"
 	},
 	"dependencies": {
 		"@docusaurus-terminology/parser": "^1.3.0",
