--- a/website/package.json
+++ b/website/package.json
@@ -56,6 +56,7 @@
     "@docusaurus/types": "^2.3.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
+    "docusaurus2-dotenv": "^1.4.0",
     "path-browserify": "^1.0.1",
     "stream-browserify": "^3.0.0"
   }
